Ensure selected node is focused/visible in tree upon move/tree load; Fix overflow issue hiding Move submenu under panel;

--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -16,7 +16,7 @@
   #gradient > .vertical(#F3F3F3, #EDEDED);
   border-top: 1px solid #EEE;
   border-bottom: 1px solid #FFF;
-  overflow: hidden;
+  overflow: visible;
 
   > .archives-tree-title {
     background-color: #eee;
